hobby/src/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: hobby
    app.kubernetes.io/version: 1.0.0
  name: hobby
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: hobby
                port:
                  name: http
            path: /
            pathType: Prefix
